test/integration/httproute/manifests/backend-crd/extended/backend-cr-2.yaml
apiVersion: gate.v3.haproxy.org/v3
kind: Backend
metadata:
  name: backend-cr-2
spec:
  http_request_rule_list:
  - hdr_format: 'Staging'
    hdr_name: X-Environment
    type: add-header
